sass/web.site/modules/teaser/_teaser.sass
/// Teaser Scaffolding
/// As all teasers should be BEM-Blocks, they need to share
/// lots of code via placeholder selectors

%teaser
	+pie-clearfix
	border-top: 1px solid $zon_light_grey
	margin: 0 -($page-padding)
	padding: $vertical-space $page-padding
	&:nth-of-type(1)
		border-top: none
	+respond-min($break-areas)
		border-bottom: none
		border-top: none
		margin: 0
		padding: $vertical-space 0

%teaser-small-media-placement
	position: relative
	+respond-min($break-phablet-min)
		padding: $petite 0 $petite remify(150px+20px)
	+respond-min($break-tablet-min)
		padding: $petite 0 $petite remify(150px+20px)
	+respond-min($break-desktop-min)
		padding: $petite 0 $petite remify(250px+20px)

%teaser-small-media
	vertical-align: top
	width: 100%
	+respond-min($break-phablet-min)
		display: table-cell
		padding-right: $petite
		width: remify(150px+20px)
	+respond-min($break-tablet-min)
		width: remify(150px+20px)
	+respond-min($break-desktop-min)
		width: remify(250px+20px)

%teaser-small-container
	vertical-align: top
	+respond-min($break-phablet-min)
		display: table-cell
		vertical-align: top

%teaser-series-label
	color: $zon_grey
	font-size: remify(12px)
	letter-spacing: $zon-letter-spacing-l
	margin: 0 0 remify(8px) 0
	text-transform: uppercase

%teaser-heading
	font-size: 1em
	margin: 0 0 $tiny 0

%teaser-kicker
	display: block
	color: $color-text-highlighted
	font-size: $font-ss
	font-weight: bold
	letter-spacing: $zon-letter-spacing-m
	line-height: 1.2
	margin-bottom: em(3px, 13px)

%teaser-kicker--blog
	color: $zon_dark_grey
	font-family: $font-franziska
	font-style: italic
	font-weight: normal

%teaser-combined-link
	color: $color-text
	display: block
	text-decoration: none
	&:link,
	&:visited
		color: inherit
	&:hover
		span
			text-decoration: none
		span:first-child
			text-decoration: none

%teaser-title
	display: block
	color: $zon-charcoal
	font-size: $font-l
	font-weight: 700
	letter-spacing: $zon-letter-spacing-s
	line-height: 1.2
	&:hover
		color: $black

%teaser-media
	margin: 0 0 remify(20px) 0

%teaser-media-item

%teaser-text
	color: $zon_dark_grey
	font-size: remify(17px)
	line-height: 1.4
	margin: 0 0 remify(4px) 0
	+respond-min($break-phablet-min)
		font-size: remify(15px)

%teaser-byline
	color: $zon_grey
	display: block
	font-size: $font-ss
	line-height: 1.3846
	letter-spacing: $zon-letter-spacing-s
	margin-bottom: remify(4px)

%teaser-metadata
	color: $zon_grey
	font-size: $font-ss
	line-height: 1.3846
	letter-spacing: $zon-letter-spacing-s

%teaser-datetime
	&:not(:last-child):not(:empty):after
		content: ' / '
		margin: 0 $micro

%teaser-commentcount
	&:link, &:visited
		border-bottom: 1px solid $zon_lighter_grey
		color: inherit
		text-decoration: none
	&:hover
		border-bottom: 1px solid $zon_light_grey

